--- a/blog.csproj
+++ b/blog.csproj
@@ -304,7 +304,8 @@
         <Content Include="Content\Site.css"/>
         <Content Include="Scripts\bootstrap.js"/>
         <Content Include="Scripts\bootstrap.min.js"/>
-        <Content Include="Views\Home\Login.cshtml" />
+        <Content Include="Views\Login\Index.cshtml" />
+        <Content Include="Views\Login\Signup.cshtml" />
         <Content Include="Views\Shared\src\.DS_Store" />
         <Content Include="Views\Shared\src\app\css\app.css" />
         <Content Include="Views\Shared\src\app\css\app.min.css">
@@ -605,36 +606,36 @@
         <Content Include="wwwroot\src\img\x1.png" />
         <Content Include="wwwroot\src\php\sendmail.php" />
         <Content Include="wwwroot\src\video\video1.mp4" />
-        <None Include="Scripts\jquery-3.3.1.intellisense.js"/>
-        <Content Include="Scripts\jquery-3.3.1.js"/>
-        <Content Include="Scripts\jquery-3.3.1.min.js"/>
-        <Content Include="Scripts\jquery-3.3.1.slim.js"/>
-        <Content Include="Scripts\jquery-3.3.1.slim.min.js"/>
-        <None Include="Scripts\jquery.validate-vsdoc.js"/>
-        <Content Include="Scripts\jquery.validate.js"/>
-        <Content Include="Scripts\jquery.validate.min.js"/>
-        <Content Include="Scripts\jquery.validate.unobtrusive.js"/>
-        <Content Include="Scripts\jquery.validate.unobtrusive.min.js"/>
-        <Content Include="Scripts\modernizr-2.8.3.js"/>
+        <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+        <Content Include="Scripts\jquery-3.3.1.js" />
+        <Content Include="Scripts\jquery-3.3.1.min.js" />
+        <Content Include="Scripts\jquery-3.3.1.slim.js" />
+        <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
+        <None Include="Scripts\jquery.validate-vsdoc.js" />
+        <Content Include="Scripts\jquery.validate.js" />
+        <Content Include="Scripts\jquery.validate.min.js" />
+        <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+        <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+        <Content Include="Scripts\modernizr-2.8.3.js" />
         <Content Include="Views\Shared\_Layouts.cshtml" />
-        <Content Include="Web.config"/>
+        <Content Include="Web.config" />
         <Content Include="Web.Debug.config">
             <DependentUpon>Web.config</DependentUpon>
         </Content>
         <Content Include="Web.Release.config">
             <DependentUpon>Web.config</DependentUpon>
         </Content>
-        <Content Include="Views\Web.config"/>
-        <Content Include="Views\_ViewStart.cshtml"/>
-        <Content Include="Views\Shared\Error.cshtml"/>
-        <Content Include="Views\Shared\_Layout.cshtml"/>
-        <Content Include="Views\Home\About.cshtml"/>
-        <Content Include="Views\Home\Contact.cshtml"/>
-        <Content Include="Views\Home\Index.cshtml"/>
+        <Content Include="Views\Web.config" />
+        <Content Include="Views\_ViewStart.cshtml" />
+        <Content Include="Views\Shared\Error.cshtml" />
+        <Content Include="Views\Shared\_Layout.cshtml" />
+        <Content Include="Views\Home\About.cshtml" />
+        <Content Include="Views\Home\Contact.cshtml" />
+        <Content Include="Views\Home\Index.cshtml" />
     </ItemGroup>
     <ItemGroup>
-        <Folder Include="App_Data"/>
-        <Folder Include="Models"/>
+        <Folder Include="App_Data" />
+        <Folder Include="Models" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="fonts\glyphicons-halflings-regular.woff2"/>
